--- a/src/main/resources/static/order-detail.html
+++ b/src/main/resources/static/order-detail.html
@@ -34,6 +34,7 @@
             <h4 id="role" class="text-warning"><i class="fa-solid fa-store"></i></h4>
             <ul id="sidebar-menu" class="nav flex-column">
                 <li class="nav-item nav-home"><a href="/index.html" class="nav-link"><i class="fa-solid fa-house"></i> Home</a></li>
+                <li class="nav-item nav-report"><a href="/report.html" class="nav-link"><i class="fa-solid fa-file-invoice"></i> Report</a></li>
                 <li class="nav-item nav-goods"><a href="/goods.html" class="nav-link"><i class="fa-solid fa-box"></i> Goods</a></li>
                 <li class="nav-item nav-order"><a href="/order.html" class="nav-link"><i class="fa-solid fa-clipboard-list"></i> Order</a></li>
                 <li class="nav-item nav-staff"><a href="/staff.html" class="nav-link"><i class="fa-solid fa-user"></i> Staff</a></li>
