LeCuongQuoc --update UI

--- a/src/main/resources/static/review.html
+++ b/src/main/resources/static/review.html
@@ -51,8 +51,8 @@
 <!-- Main Content -->
 <div class="main-content p-4 w-100">
     <!-- Header -->
-    <div class="main-header d-flex bg-dark">
-        <h5 class="text-warning"><i class="fa-solid fa-shop"> After-sale</i></h5>
+    <div class="main-header d-flex justify-content-center " style="background: none  !important;">
+        <h5 class="text-dark "><i class="fa-solid fa-shop"> Review</i></h5>
     </div>
     <div class="container mt-5">
         <h4 class="text-warning"><i class="fa-solid fa-star"></i> Đánh giá qua thời gian</h4>
