--- a/src/main/resources/static/inventory-order-detail.html
+++ b/src/main/resources/static/inventory-order-detail.html
@@ -53,8 +53,8 @@
     <!-- Main Content -->
     <div class="main-content p-4 w-100">
         <!-- Header -->
-        <div class="main-header d-flex justify-content-between align-items-center bg-dark p-3 rounded">
-          <h5 class="text-warning mb-0"><i class="fa-solid fa-warehouse"></i> Inventory Order</h5>
+        <div class="main-header d-flex justify-content-between align-items-center  p-3 rounded">
+          <h5 class="text-dark mb-0"><i class="fa-solid fa-warehouse"></i> Inventory Order</h5>
         </div>
       
         <!-- Layout 2 cột -->
