--- a/src/main/resources/static/order-detail.html
+++ b/src/main/resources/static/order-detail.html
@@ -52,8 +52,8 @@
     <!-- Main Content -->
     <div class="main-content p-4 w-100">
         <!-- Header -->
-        <div class="main-header d-flex justify-content-between align-items-center bg-dark p-3 rounded">
-            <h5 id="pager-title" class="text-warning mb-0"><i class="fa-solid fa-shop"></i> Order</h5>
+        <div class="main-header d-flex justify-content-between align-items-center  p-3 rounded">
+            <h5 id="pager-title" class="text-dark mb-0"><i class="fa-solid fa-shop"></i> Order</h5>
         </div>
 
         <div class="order-layout mt-4">
